--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <i  class="fas fa-3x fa-step-forward"></i>
         </div>
         <div class="songInfo">
-            <img src="music.gif" width="42px" alt="" id="gif">Pasoori -Ali Sethi and Shae Gill
+            <img src="music.gif" width="42px" alt="" id="gif"><span id="masterSongName">Chaand Baliya</span>
         </div>
     </div>
     
