--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
         <input type="range" name="range" id="myProgressBar" min="0" value="0" max="100">
         <div class="icons">
             <!-- fontawesome icons -->
-            <i  class="fas fa-3x fa-step-backward"></i>
-            <i  class="far fa-3x fa-play-circle" id="play"></i>
-            <i  class="fas fa-3x fa-step-forward"></i>
+            <i  class="fas fa-3x fa-step-backward" id="previous"></i>
+            <i  class="far fa-3x fa-play-circle" id="masterPlay"></i>
+            <i  class="fas fa-3x fa-step-forward" id="next"></i>
         </div>
         <div class="songInfo">
-            <img src="music.gif" width="42px" alt="" id="gif"><span id="masterSongName">Chaand Baliya</span>
+            <img src="music.gif" width="42px" alt="" id="gif"> <span id="masterSongName">Chaand Baliya</span>
         </div>
     </div>
     
